--- a/index.html
+++ b/index.html
@@ -89,17 +89,56 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
         </div>
         <div class="card-content">
           <h3>High School</h3>
-          <p>In 2016 I graduated from Lycée Hélène Boucher (Science branch and Physics Chemistry Specialty) with High honours</p>
+          <p>In 2016 I graduated from Lycée Hélène Boucher (Science branch and Physics Chemistry Specialty) with <b>High honours</b></p>
         </div>
       </div>
 
       <div class="card with-image">
         <div class="card-image">
-          <img class="mock-img" src="resources/image/utt.jpg" alt="UTT">
+          <img class="mock-img" src="resources/image/utt.jpg" alt="UTT Logo">
         </div>
         <div class="card-content">
           <h3>University</h3>
-          <p>In 2016 I graduated from Lycée Hélène Boucher (Science branch and Physics Chemistry Specialty) with High honours</p>
+          <p>
+            In September 2016, I joined an integrated preparatory programme for Engineering Studies at the Université de Troyes (UTT).
+            I started a Bachelor's degree in <b>Electrical Engineering and Computer Science</b> at the Institut Universitaire de Technologie de Troyes.
+          </p>
+          <p>
+            The last semester was done as an Erasmus Exchange within the Faculty of Electrical Engineering and Computer Science of Vysoká škola báňská, Technical University of Ostrava in the Czech Republic
+            I had the chance to work with international students from all over Europe in group projects.
+            This experience made me realise that I like working in a <b>multicultural</b> and <b>english-speaking environment</b>
+          </p>
+        </div>
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/vsb.jpg" alt="VSB TUO Ostrava Logo">
+        </div>
+      </div>
+
+      <div class="card with-image">
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/efrei.jpg" alt="EFREI Logo">
+        </div>
+        <div class="card-content">
+          <h3>Engineering School</h3>
+          <p>
+             In September 2020, I joined an engineering school in Paris, l'Ecole Française d'Electronique et d'Informatique.
+          </p>
+          <p>
+            As an apprentice, I was both working as a Software Engineer (3 days a week) and attending classes (2 days a week).
+          </p>
+          <p>
+            Passionate about aviation, I chose THALES as a company, working on military IFF Products, for famous planes such as the Dassault Rafale, SAAB Gripen and Airbus A330 MRTT.
+          </p>
+          <p>
+            To validate my degree, I had to spend at least 3 months abroad.
+            I had found an internship in Donauwörth in Germany, where a very famous helicopter manufacturer is located, but my internship was cancelled at the last minute and I hade to find a solution.
+          </p>
+          <p>
+            I chose to do a volunteering experience in Indonesia and Sri Lanka instead of an internship.
+          </p>
+        </div>
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/graduation.jpg" alt="Graduation Picture">
         </div>
       </div>
 
@@ -109,7 +148,20 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
         </div>
         <div class="card-content">
           <h3>Volunteering in Indonesia</h3>
-          <p>In 2016 I graduated from Lycée Hélène Boucher (Science branch and Physics Chemistry Specialty) with High honours</p>
+          <p>
+            As part of an organisation, I spent 3 weeks in Tianjar, Indonesia. I collaborated with international volunteers (mainly British) and Balinese locals.
+          </p>
+          <p>
+            The sea floors are destroyed by overfishing in Indonesia, our mission was to help restore the coral population in the nearby beaches, in close collaboration with locals.
+          </p>
+          <p>
+            This was done by mixing cement with water to make concrete, dig into the ground to make molds,
+             pour the concrete inside the molds. Once the concrete structures were dry, our job was to dig them out of the ground, carry them to fishermen boats, and throw them out at sea.
+            We could also dive to arrange the structures into bigger ones underwater.
+          </p>
+          <p>
+            The impact of this method was clearly positive, as structures from previous years were full of coral and fish and turtle population were coming back to feed.
+          </p>
         </div>
         <div class="card-image">
           <img class="mock-img" src="resources/image/cement_structures.jpg" alt="Cement structures">
@@ -122,40 +174,56 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
         </div>
         <div class="card-content">
           <h3>Volunteering in Sri Lanka</h3>
-          <p>In 2016 I graduated from Lycée Hélène Boucher (Science branch and Physics Chemistry Specialty) with High honours</p>
+          <p>
+            As part of an organisation, I spent 2 months and 1 week in Hikkaduwa, Sri Lanka. I collaborated with international volunteers (mainly British) and Sri Lankan locals.
+          </p>
+          <p>
+            In Sri Lanka, plastic pollution of the shore is a big problem, and sea turtles and their eggs are poached. Our mission was to clean the sea shore, find turtle eggs and care for them until hatching and release on the beach. 
+          </p>
+          <p>
+            Every few nights we had to patrol the beach to try to find turtles laying eggs. If we found some eggs, we had to bring them to a protected hatchery. During the day, we mainly cleaned the beaches.
+            There was also opportunities to give children lessons, either english lessons, sports or swimming lessons.
+          </p>
+          <p>
+            Our impact was meaningful, as we ensured the safe release into the sea of hundreds if not thousands of turtles during my stay there.
+          </p> 
         </div>
       </div>
 
-      <div class="card">
-        <h3>Moving out and University</h3>
-        <p>Moved out of Paris to attend a preparatory Program for Engineering Studies at Université de Technologie de Troyes
-        </p>
-        <img class="mock-img" src="mock1.jpg" alt="">
+      <div class="card with-image">
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/turtles.gif" alt="Turtles">
+        </div>
+        <div class="card-content">
+          <h3>Software Engineer</h3>
+          <p>
+            As part of an organisation, I spent 2 months and 1 week in Hikkaduwa, Sri Lanka. I collaborated with international volunteers (mainly British) and Sri Lankan locals.
+          </p>
+          <p>
+            In Sri Lanka, plastic pollution of the shore is a big problem, and sea turtles and their eggs are poached. Our mission was to clean the sea shore, find turtle eggs and care for them until hatching and release on the beach. 
+          </p>
+          <p>
+            Every few nights we had to patrol the beach to try to find turtles laying eggs. If we found some eggs, we had to bring them to a protected hatchery. During the day, we mainly cleaned the beaches.
+            There was also opportunities to give children lessons, either english lessons, sports or swimming lessons.
+          </p>
+          <p>
+            Our impact was meaningful, as we ensured the safe release into the sea of hundreds if not thousands of turtles during my stay there.
+          </p> 
+        </div>
       </div>
-      <div class="card">
-        <h3></h3>
-        <p></p>
-        <img class="mock-img" src="mock1.jpg" alt="">
+
+      <div class="card with-image">
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/p2006T.jpg" alt="Tecnam P2006T">
+        </div>
+        <div class="card-content">
+          <h3>Bartolini Air</h3>
+          <p>
+            I joined Bartolini in June 2025.
+          </p>
+        </div>
       </div>
-      <div class="card">
-        <h3></h3>
-        <p></p>
-        <img class="mock-img" src="mock1.jpg" alt="">
-      </div>
-      <div class="card">
-        <h3>Pause</h3>
-        <p>Financial constraints forced a temporary pause in my aviation journey.</p>
-      </div>
-      <div class="card">
-        <h3>Return – Lognes (LFPL)</h3>
-        <p>I returned to aviation at Lognes near Paris.</p>
-        <img class="mock-img" src="mock4.jpg" alt="Return to aviation">
-      </div>
-      <div class="card">
-        <h3>Professional Training</h3>
-        <p>I completed my CPL / IR / ME training at Bartolini Air in Poland.</p>
-        <img class="mock-img" src="mock5.jpg" alt="Professional training">
-      </div>
+      
     </section>
 
     <!-- Timeline -->
@@ -263,10 +331,21 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
       revealTimeline();
     });
 
-    window.addEventListener('load', () => {
-      handlePlane();
-      revealTimeline();
-    });
+    let ticking = false;
+
+    function onScroll() {
+      if (!ticking) {
+        window.requestAnimationFrame(() => {
+          handlePlaneScroll();
+          revealTimeline();
+          ticking = false;
+        });
+        ticking = true;
+      }
+    }
+
+window.addEventListener('scroll', onScroll);
+
   </script>
 </body>
 </html>
