--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="resources/style.css"rel="stylesheet">
 </head>
 <body>
-
+<div class="body-wrapper">
   <!-- Hero Section -->
   <div class="hero">
     <h1>Lucas Chauvin</h1>
@@ -347,5 +347,6 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
 window.addEventListener('scroll', onScroll);
 
   </script>
+</div>
 </body>
 </html>
