--- a/index.html
+++ b/index.html
@@ -377,6 +377,161 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
               <td>France</td>
               <td>05/03/2024</td>
               <td>05/03/2025</td>
+              <td>No limitations</td>
+            </tr>
+            <tr>
+              <td>PPL(A)</td>
+              <td>France</td>
+              <td>05/03/2024</td>
+              <td>-</td>
+              <td>Skilltest passed on first attempt ✔</td>
+            </tr>
+            <tr>
+              <td>SEP(L)</td>
+              <td>France</td>
+              <td>05/03/2024</td>
+              <td>-</td>
+              <td>Skilltest passed of first attempt ✔</td>
+            </tr>
+            <tr>
+              <td>Night Rating</td>
+              <td>France</td>
+              <td>05/03/2024</td>
+              <td>-</td>
+              <td>-</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <!-- ATPL RESULTS -->
+      <div class="card">
+      <h3>ATPL Results</h3>
+      <br/>
+      <div class="table-wrapper">
+        <table class="docs-table">
+          <thead>
+            <tr>
+              <th>ATPL Subject</th>
+              <th>Grade</th>
+              <th>Number of attempts</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>010 - AIR LAW</td>
+              <td>97.73%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>021 - AIRFRAME - SYSTEMS - POWERPLANT</td>
+              <td>98.75%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>022 - INSTRUMENTATION</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>031 - MASS AND BALANCE</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>032 - PERFORMANCE</td>
+              <td>81.48%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>033 - FLIGHT PLANNING AND MONITORING</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>040 - HUMAN PERFORMANCE</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>050 - METEOROLOGY</td>
+              <td>97.65%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>061 - GENERAL NAVIGATION</td>
+              <td>92.19%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>062 - RADIO NAVIGATION</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>070 - OPERATIONAL PROCEDURES</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>081 - PRINCIPLES OF FLIGHT</td>
+              <td>89.13%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>090 - COMMUNICATIONS</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+          </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <h2>Aviation</h2>
+      <div class="card">
+      <h3>Aviation Documents</h3>
+      <br/>
+      <div class="table-wrapper">
+        <table class="docs-table">
+          <thead>
+            <tr>
+              <th>Document Title</th>
+              <th>State of Issue</th>
+              <th>Date of Issue</th>
+              <th>Date of Expiry</th>
+              <th>Remarks</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>CPL(A)</td>
+              <td>POLAND</td>
+              <td>12/06/2021</td>
+              <td>—</td>
+              <td>Skilltest passed on first attempt ✔</td>
+            </tr>
+            <tr>
+              <td>IR(A)</td>
+              <td>POLAND</td>
+              <td>12/06/2021</td>
+              <td>12/06/2024</td>
+              <td>Skilltest passed on first attempt ✔</td>
+            </tr>
+            <tr>
+              <td>MEP(L)</td>
+              <td>POLAND</td>
+              <td>12/06/2021</td>
+              <td>12/06/2024</td>
+              <td>Skilltest passed on first attempt ✔</td>
+            </tr>
+            <tr>
+              <td>Class 1 Medical</td>
+              <td>France</td>
+              <td>05/03/2024</td>
+              <td>05/03/2025</td>
               <td>-</td>
             </tr>
             <tr>
