--- a/index.html
+++ b/index.html
@@ -197,18 +197,11 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
         <div class="card-content">
           <h3>Software Engineer</h3>
           <p>
-            As part of an organisation, I spent 2 months and 1 week in Hikkaduwa, Sri Lanka. I collaborated with international volunteers (mainly British) and Sri Lankan locals.
+            After graduation, I joined ALTEN as a Software Engineer Consultant, with a mission at THALES Land and Air Systems.
           </p>
           <p>
-            In Sri Lanka, plastic pollution of the shore is a big problem, and sea turtles and their eggs are poached. Our mission was to clean the sea shore, find turtle eggs and care for them until hatching and release on the beach. 
+            At the same time as working, I started the ATPL (Airline Transport Pilot License) theory at <a href="https://www.atoalaintruchi.com/"> ATO Alain Truchi</a>
           </p>
-          <p>
-            Every few nights we had to patrol the beach to try to find turtles laying eggs. If we found some eggs, we had to bring them to a protected hatchery. During the day, we mainly cleaned the beaches.
-            There was also opportunities to give children lessons, either english lessons, sports or swimming lessons.
-          </p>
-          <p>
-            Our impact was meaningful, as we ensured the safe release into the sea of hundreds if not thousands of turtles during my stay there.
-          </p> 
         </div>
       </div>
 
@@ -266,6 +259,161 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
     </section>
 
     <section>
+      <h2>Aviation</h2>
+      <div class="card">
+      <h3>Aviation Documents</h3>
+      <br/>
+      <div class="table-wrapper">
+        <table class="docs-table">
+          <thead>
+            <tr>
+              <th>Document Title</th>
+              <th>State of Issue</th>
+              <th>Date of Issue</th>
+              <th>Date of Expiry</th>
+              <th>Remarks</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>CPL(A)</td>
+              <td>POLAND</td>
+              <td>12/06/2021</td>
+              <td>—</td>
+              <td>Skilltest passed on first attempt ✔</td>
+            </tr>
+            <tr>
+              <td>IR(A)</td>
+              <td>POLAND</td>
+              <td>12/06/2021</td>
+              <td>12/06/2024</td>
+              <td>Skilltest passed on first attempt ✔</td>
+            </tr>
+            <tr>
+              <td>MEP(L)</td>
+              <td>POLAND</td>
+              <td>12/06/2021</td>
+              <td>12/06/2024</td>
+              <td>Skilltest passed on first attempt ✔</td>
+            </tr>
+            <tr>
+              <td>Class 1 Medical</td>
+              <td>France</td>
+              <td>05/03/2024</td>
+              <td>05/03/2025</td>
+              <td>No limitations</td>
+            </tr>
+            <tr>
+              <td>PPL(A)</td>
+              <td>France</td>
+              <td>05/03/2024</td>
+              <td>-</td>
+              <td>Skilltest passed on first attempt ✔</td>
+            </tr>
+            <tr>
+              <td>SEP(L)</td>
+              <td>France</td>
+              <td>05/03/2024</td>
+              <td>-</td>
+              <td>Skilltest passed of first attempt ✔</td>
+            </tr>
+            <tr>
+              <td>Night Rating</td>
+              <td>France</td>
+              <td>05/03/2024</td>
+              <td>-</td>
+              <td>-</td>
+            </tr>
+            </tbody>
+          </table>
+        </div>
+      </div>
+      <!-- ATPL RESULTS -->
+      <div class="card">
+      <h3>ATPL Results</h3>
+      <br/>
+      <div class="table-wrapper">
+        <table class="docs-table">
+          <thead>
+            <tr>
+              <th>ATPL Subject</th>
+              <th>Grade</th>
+              <th>Number of attempts</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>010 - AIR LAW</td>
+              <td>97.73%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>021 - AIRFRAME - SYSTEMS - POWERPLANT</td>
+              <td>98.75%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>022 - INSTRUMENTATION</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>031 - MASS AND BALANCE</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>032 - PERFORMANCE</td>
+              <td>81.48%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>033 - FLIGHT PLANNING AND MONITORING</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>040 - HUMAN PERFORMANCE</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>050 - METEOROLOGY</td>
+              <td>97.65%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>061 - GENERAL NAVIGATION</td>
+              <td>92.19%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>062 - RADIO NAVIGATION</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>070 - OPERATIONAL PROCEDURES</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>081 - PRINCIPLES OF FLIGHT</td>
+              <td>89.13%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+            <tr>
+              <td>090 - COMMUNICATIONS</td>
+              <td>100%</td>
+              <td>First Attempt ✔</td>
+            </tr>
+          </tbody>
+          </table>
+        </div>
+      </div>
+    </section>
+
+    <section>
       <!-- FINAL CARD WITH PICTURE AND LINKEDIN -->
       <div class="card with-image">
         <div class="card-image">
@@ -290,7 +438,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
       </a>
         </div>
       </div>
-</section>
+    </section>
 
   </div>
 
