--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
 
       <div class="card with-image">
         <div class="card-image">
-          <img class="mock-img" src="resources/image/dr400.jpg" alt="Plane">
+          <img class="mock-img" src="resources/image/flying.jpg" alt="Plane">
         </div>
         <div class="card-content">
           <h3>Brevet de Base and PPL</h3>
@@ -155,12 +155,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
             The sea floors are destroyed by overfishing in Indonesia, our mission was to help restore the coral population in the nearby beaches, in close collaboration with locals.
           </p>
           <p>
-            This was done by mixing cement with water to make concrete, dig into the ground to make molds,
-             pour the concrete inside the molds. Once the concrete structures were dry, our job was to dig them out of the ground, carry them to fishermen boats, and throw them out at sea.
-            We could also dive to arrange the structures into bigger ones underwater.
-          </p>
-          <p>
-            The impact of this method was clearly positive, as structures from previous years were full of coral and fish and turtle population were coming back to feed.
+            We were building cement structures for the coral to grow on. Our impact was clearly positive, as structures from previous years were full of coral and fish and turtle population were coming back to feed.
           </p>
         </div>
         <div class="card-image">
@@ -181,7 +176,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
             In Sri Lanka, plastic pollution of the shore is a big problem, and sea turtles and their eggs are poached. Our mission was to clean the sea shore, find turtle eggs and care for them until hatching and release on the beach. 
           </p>
           <p>
-            Every few nights we had to patrol the beach to try to find turtles laying eggs. If we found some eggs, we had to bring them to a protected hatchery. During the day, we mainly cleaned the beaches.
+            We had to patrol the beach to try to find turtles laying eggs. We brought the eggs to a protected hatchery. We also cleaned the beaches every day.
             There was also opportunities to give children lessons, either english lessons, sports or swimming lessons.
           </p>
           <p>
@@ -192,7 +187,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
 
       <div class="card with-image">
         <div class="card-image">
-          <img class="mock-img" src="resources/image/turtles.gif" alt="Turtles">
+          <img class="mock-img" src="resources/image/dgac.jpg" alt="Turtles">
         </div>
         <div class="card-content">
           <h3>Software Engineer</h3>
@@ -200,7 +195,10 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
             After graduation, I joined ALTEN as a Software Engineer Consultant, with a mission at THALES Land and Air Systems.
           </p>
           <p>
-            At the same time as working, I started the ATPL (Airline Transport Pilot License) theory at <a href="https://www.atoalaintruchi.com/"> ATO Alain Truchi</a>
+            At the same time, I started the <b>ATPL (Airline Transport Pilot License) theory</b> at <a href="https://www.atoalaintruchi.com/"> ATO Alain Truchi</a>
+          </p>
+          <p>
+            I passed all subjects in around 1 year, all on the first attempt, achieving <b>96.7% average</b>, while working a full time job at the same time.
           </p>
         </div>
       </div>
@@ -212,7 +210,25 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
         <div class="card-content">
           <h3>Bartolini Air</h3>
           <p>
-            I joined Bartolini in June 2025.
+            I joined Bartolini in June 2025. After a longer than planned training (because of operational reasons), I passed my CPL IR MEP skilltests on the first attempt on the 28th of January 2026.
+          </p>
+          <p>
+            The life in Lodz (Poland) was fun, and living abroad has strengthened my will to work in an international environment.
+          </p>
+        </div>
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/flying.gif" alt="Flying IFR at night">
+        </div>
+      </div>
+
+      <div class="card with-image">
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/flying.jpg" alt="Flying IFR">
+        </div>
+        <div class="card-content">
+          <h3>What's next ?</h3>
+          <p>
+            I joined Bartolini in June 2025. After a longer than planned training (because of operational reasons), I passed my CPL IR MEP skilltests on the first attempt on the 28th of January 2026.
           </p>
         </div>
       </div>
