--- a/index.html
+++ b/index.html
@@ -205,6 +205,21 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
 
       <div class="card with-image">
         <div class="card-image">
+          <img class="mock-img" src="resources/image/panel_simulator.jpg" alt="Simulator Overhead Panel">
+        </div>
+        <div class="card-content">
+          <h3>Homemade 737 Simulator</h3>
+          <p>
+            After graduation, I joined ALTEN as a Software Engineer Consultant, with a mission at THALES Land and Air Systems.
+          </p>
+        </div>
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/panel_simulator_2.jpg" alt="Simulator Overhead Panel">
+        </div>
+      </div>
+
+      <div class="card with-image">
+        <div class="card-image">
           <img class="mock-img" src="resources/image/p2006T.jpg" alt="Tecnam P2006T">
         </div>
         <div class="card-content">
@@ -251,7 +266,15 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
                 &nbsp;&nbsp;&nbsp;<img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Thales_Logo.svg/1280px-Thales_Logo.svg.png" alt="Thales Logo">
                 &nbsp;<img style="width: 100px;" src="resources/image/logo_alten.png">
               </p>
-            <p></p>
+              <p>
+                - Designed, developed and tested tactical simulation software supporting realistic airspace defense training environments.
+              </p>
+              <p>
+                - Implemented NATO and industry standards and communication protocols.
+              </p>
+              <p>  
+                - Collaborated in Agile sprints to design, refine, document, and integrate simulation features for different States and military clients.
+              </p>
             </div>
           </div>
         </div>
@@ -266,8 +289,15 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
             <p>From <b>January 2025</b> to <b>May 2026</b>
                 &nbsp;&nbsp;&nbsp;<img style="width: 100px" src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Thales_Logo.svg/1280px-Thales_Logo.svg.png" alt="Thales Logo">
               </p>
-            <p></p>
-
+              <p>
+               - Contributed to IFF system validation and verification for military aircraft such as the Rafale, Gripen, and A330 MRTT.
+              </p>
+              <p>
+                - Developed automated tests and a web app to support testing processes leading to <b>80% reduction time in testing some components of the test benches</b>. 
+              </p>
+              <p>  
+                - Collaborated across teams to meet military requirements and improve documentation and workflows.
+              </p>
             </div>
           </div>
         </div>
