--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Lucas Chauvin - CV</title>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
   <link href="resources/style.css"rel="stylesheet">
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
 </head>
 <body>
 
@@ -241,6 +242,26 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
           </p>
           <p>
             The life in Lodz, Poland was very nice, and living abroad has strengthened my <b>will to work in an international environment</b>.
+          </p>
+        </div>
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/flying.gif" alt="Flying IFR at night">
+        </div>
+      </div>
+
+      <div class="card with-image">
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/p2006T.jpg" alt="Tecnam P2006T">
+        </div>
+        <div class="card-content">
+          <h3>Time building</h3>
+          <p>
+            To get the required amount of hours, I have flown with some pilots who are now working for major european airlines.
+          <p>
+            I have flown mainly in the northern and western part of France as well as a few flights in the french Alps.
+          </p>
+          <p>
+            This time building was also a good time to share my passion with my family, colleagues and friends, who all now have very good memories in the air.
           </p>
         </div>
         <div class="card-image">
