new photos and better

--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
       
       <div class="card with-image">
         <div class="card-image">
-          <img class="mock-img" src="resources/image/dr400.jpg" alt="Plane">
+          <img class="mock-img" src="resources/image/rallye.jpg" alt="Rallye 110">
         </div>
         <div class="card-content">
           <h3>Early Fascination</h3>
-            <p>As a child, I loved building and painting model planes.</p>
-            <p>I remember my father taking me to the 2009 Paris Le Bourget Air Show, when I saw the A380 flying I couldn't believe that something this big could fly, it felt almost magical.</p>
-            <p>Thanks to my parents, I had the chance to go on a plane modeling summer camp and flew a glider in the Pyrenees during this summer camp — that flight sealed my passion for aviation.</p>
+            <p>As a child, I loved <b>building and painting model planes</b>.</p>
+            <p>I remember my father taking me to the 2009 <b>Paris Le Bourget Air Show</b>, when I saw the A380 flying for the first time, I couldn't believe my eyes, it felt almost <b>magical</b>.</p>
+            <p>At around 10 years old, I had the chance to do a 30 minutes glider flight in the Pyrenees — <b>that flight sealed my passion for aviation</b>.</p>
         </div>
       </div>
 
       <div class="card with-image">
         <div class="card-image">
-          <img class="mock-img" src="resources/image/flying.jpg" alt="Plane">
+          <img class="mock-img" src="resources/image/rallye2.jpg" alt="Rallye 110">
         </div>
         <div class="card-content">
           <h3>Brevet de Base and PPL</h3>
@@ -101,7 +101,7 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
         </div>
         <div class="card-content">
           <h3>High School</h3>
-          <p>In 2016 I graduated from Lycée Hélène Boucher (Science branch and Physics Chemistry Specialty) with <b>High honours</b></p>.
+          <p>In 2016 I graduated from Lycée Hélène Boucher (Science branch and Physics Chemistry Specialty) with <b>High honours</b>.</p>
         </div>
       </div>
 
@@ -231,6 +231,30 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
 
       <div class="card with-image">
         <div class="card-image">
+          <img class="mock-img" src="resources/image/skydive.jpg" alt="skydive">
+        </div>
+        <div class="card-content">
+          <h3>Skydiving</h3>
+          <p>
+            I began skydiving in 2016 and have since completed <b>around 60 jumps from Pilatus PC-6 aircraft</b> at drop zones across France.
+          </p>
+          <p>
+            Skydiving is a <b>demanding discipline</b> that develops exceptional focus, self-control, and decision-making under time pressure.
+          </p>
+          <p>
+            Each jump requires <b>thorough preparation, precise execution, and the ability to remain calm in dynamic environments</b>.
+          </p>
+          <p>
+            Through skydiving, I have strengthened my <b>situational awareness, risk management, and confidence</b>: qualities that directly translate into <b>safer, more effective piloting</b>.
+          </p>
+          <p>
+            This experience has played a significant role in <b>shaping me into a more disciplined and capable pilot</b>.
+          </p>
+        </div>
+      </div>
+
+      <div class="card with-image">
+        <div class="card-image">
           <img class="mock-img" src="resources/image/alps.gif" alt="Alps">
         </div>
         <div class="card-content">
@@ -238,11 +262,14 @@ l347 -3 0 -28 c0 -27 3 -29 53 -35 28 -3 82 -6 120 -6 60 0 67 -2 67 -20 0
           <p>
             To get the required amount of hours, I have flown <b>alone, with passengers or with other pilots</b> who are now working for major european airlines.
           <p>
-            The flights were mainly in the <b>northern and western part of France</b> as well as in the <b>french Alps</b>.
+            The flights were mainly on the <b>DR400</b> (DR400-120 and DR400-140B) in the <b>northern and western part of France</b> departing from Lognes (LFPL), as well as in the <b>french Alps</b>.
           </p>
           <p>
             This time building was also a good time to <b>share my passion with my family, colleagues and friends</b>, who all now have very good memories in the air.
           </p>
+        </div>
+        <div class="card-image">
+          <img class="mock-img" src="resources/image/dad.jpg" alt="Dad">
         </div>
       </div>
 
